src/np222kk/dv507/a2/test/cases/positive/test_alot.ofp
void main() {
    int i = 5;
    int[] iArr = new int[5];
    
}