src/np222kk/dv507/a2/test/cases/negative/test_if_04.ofp
void main() {
    if (test()) {
        print("Test");
    }
}

char[] test() {
    
}